--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,7 +23,10 @@
 @import "~bootstrap/scss/helpers";
 
 // Components
+@import "~bootstrap/scss/nav";
+@import "~bootstrap/scss/close";
 @import "~bootstrap/scss/navbar";
+@import "~bootstrap/scss/transitions";
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "~bootstrap/scss/utilities/api";
