--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,6 +27,7 @@
 @import "~bootstrap/scss/close";
 @import "~bootstrap/scss/navbar";
 @import "~bootstrap/scss/transitions";
+@import "~bootstrap/scss/buttons";
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "~bootstrap/scss/utilities/api";
